# bank-service

./: Cargo.toml  Config.toml  LICENSE  README.md
src/: error.rs  main.rs
src/core/: mod.rs  processor.rs
src/domain/: account.rs  app_state.rs  command.rs  mod.rs  response.rs  status.rs  transaction.rs
src/handler/: account.rs  mod.rs  transaction.rs
src/service/: account_service.rs  bank_service.rs  mod.rs  transfer_service.rs
src/util/: config.rs  mod.rs  rand_util.rs
