[package]
name = "bank-service"
version = "0.1.0"
authors = ["Samuel Fatoki <samfatoks@gmail.com>"]
description = "A basic bank"
repository = "https://github.com/samfatoks/bank-service"
license = "MIT"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
serde = "1.0.104"
qldb = "0.4.1"
ion-binary-rs = "0.7.0"
bigdecimal = { version = "0.2.0", features = ["serde"] }
rand = "0.7.3"
chrono = "0.4.15"
actix-web = "3"
dotenv = "0.15.0"
config = { version = "0.10.1", default-features = false } 

# [dev-dependencies]
# actix-rt = "1.1.1"
# serde_json = "1.0.42"